integrate per-certificate fees into REST API
