# jormungandr/src/rest/v0/handlers.rs
@@ -7,6 +7,7 @@ use actix_web::{Json, Path, Query, Responder, State};
 use chain_core::property::{Block, Deserialize, Serialize as _};
 use chain_crypto::{Blake2b256, PublicKey};
 use chain_impl_mockchain::account::{AccountAlg, Identifier};
+use chain_impl_mockchain::fee::PerCertificateFee;
 use chain_impl_mockchain::fragment::{Fragment, FragmentId};
 use chain_impl_mockchain::key::Hash;
 use chain_impl_mockchain::leadership::{Leader, LeadershipConsensus};
@@ -290,6 +291,7 @@ pub fn get_settings(context: State<Context>) -> ActixFuture!() {
             let consensus_version = ledger.consensus_version();
             let current_params = blockchain_tip.epoch_ledger_parameters();
             let fees = current_params.fees;
+            let per_certificate_fees = fees.per_certificate_fees.unwrap_or(PerCertificateFee::new(fees.certificate, fees.certificate, fees.certificate));
             let slot_duration = blockchain_tip.time_frame().slot_duration();
             let slots_per_epoch = blockchain_tip
                 .epoch_leadership_schedule()
@@ -304,6 +306,11 @@ pub fn get_settings(context: State<Context>) -> ActixFuture!() {
                     "constant": fees.constant,
                     "coefficient": fees.coefficient,
                     "certificate": fees.certificate,
+                    "per_certificate_fees": {
+                        "certificate_pool_registration": per_certificate_fees.certificate_pool_registration,
+                        "certificate_stake_delegation": per_certificate_fees.certificate_stake_delegation,
+                        "certificate_owner_stake_delegation": per_certificate_fees.certificate_owner_stake_delegation,
+                    },
                 },
                 "maxTxsPerBlock": 255, // TODO?
                 "slotDuration": slot_duration,
